--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <html>
-    <head></head>
-    <body>
-        <h1>Scue</h1>
-    </body>
+
+<head>
+    <style>
+        h1 {
+            font-size: 24;
+            text-align: center;
+        }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 20%;
+            background-color: transparent;
+        }
+
+        html {
+            background-color: rgb(41, 40, 56);
+        }
+    </style>
+</head>
+
+<body>
+    <img src="res/logo.png">
+    <h1>Scue</h1>
+</body>
+
 </html>
