--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
             font-size: 24;
             text-align: center;
         }
+        
+        p {
+            font-size: 20;
+            text-align: center;
+        }
 
         img {
             display: block;
